# llvm-propeller

./: .bazelrc  .gitattributes  AUTHORS  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  WORKSPACE.bzlmod  ci.yaml  clang.patch  create_llvm_prof  llvm.patch  llvm_ext.bzl
.github/workflows/: ci.yaml
ArtifactEvaluation/: README.md
ArtifactEvaluation/Scripts/: cache_all_artifacts.sh  gen_heatmap.sh  generate_build_script.sh  mem_bolt_rewrite.sh  mem_propeller_build.sh  optimize_clang.sh  perf_all_clang_binaries.sh  sizes_clang.sh
Bazel/registry/: bazel_registry.json
CMake/: GenerateTests.cmake
CMake/Absl/: Absl.cmake  CMakeLists.txt.in
CMake/Googletest/: CMakeLists.txt.in  Googletest.cmake
CMake/LLVM/: CMakeLists.txt.in  LLVM.cmake
CMake/Protobuf/: CMakeLists.txt.in  Protobuf.cmake
CMake/Quipper/: CMakeLists.quipper.txt  CMakeLists.txt.in  Quipper.cmake
Docs/: OptimizeClangO3WithPropeller.md
clang-bolt-experiment/v1/: .gitattributes  commands  do-clang-bolt-command
clang-bolt-experiment/v2/: .gitattributes  .gitignore  commands  results
clang/docs/: ClangCommandLineReference.rst  UsersManual.rst
clang/lib/CodeGen/: BackendUtil.cpp  CGDeclCXX.cpp  CodeGenModule.cpp  CodeGenModule.h
clang/lib/Frontend/: CompilerInvocation.cpp
clang/test/CodeGen/: basic-block-sections.c  basicblock-sections.c  unique-internal-funcnames.c  unique-internal-linkage-names.cpp  unique-internal-linkage-names2.c  unique_internal_funcnames.c
clang/test/Driver/: fbasicblock-sections.c  funique-bb-section-names.c  funique-internal-funcnames.c  propeller-flags.c
clang/tools/driver/: cc1as_main.cpp
compiler-rt/lib/sanitizer_common/: sanitizer_asm.h
lld/: CMakeLists.txt
lld/Common/: Args.cpp
lld/ELF/: CMakeLists.txt  Config.h  Driver.cpp  Heap.h  InputSection.cpp  InputSection.h  LTO.cpp  LinkerPropeller.cpp  LinkerPropeller.h  Options.td  OutputSections.cpp  PLO.cpp  PLO.h  PLOBBOrdering.cpp  PLOBBOrdering.h  PLOBBReordering.cpp  PLOBBReordering.h  PLOELFCfg.cpp  PLOELFCfg.h  PLOELFView.cpp  PLOELFView.h  PLOFuncOrdering.cpp  PLOFuncOrdering.h  PLOOrderingOutput.h  PLOProfile.cpp  PLOProfile.h  Propeller.cpp  Propeller.h  PropellerBBReordering.cpp  PropellerBBReordering.h  PropellerCfg.cpp  PropellerCfg.h  PropellerELFCfg.cpp  PropellerELFCfg.h  PropellerFuncOrdering.cpp  PropellerFuncOrdering.h  PropellerProtobuf.h  Relocations.h  SyntheticSections.cpp  SyntheticSections.h  (+3 more)
lld/ELF/Arch/: X86_64.cpp
lld/ELF/Propeller/: CMakeLists.txt  Heap.h  ModifiablePriorityQueue.h  Propeller.cpp  Propeller.h  PropellerBBReordering.cpp  PropellerBBReordering.h  PropellerCFG.cpp  PropellerCFG.h  PropellerChainClustering.cpp  PropellerChainClustering.h  PropellerConfig.h  PropellerFuncOrdering.cpp  PropellerNodeChain.cpp  PropellerNodeChain.h  PropellerNodeChainAssembly.cpp  PropellerNodeChainAssembly.h  PropellerNodeChainBuilder.cpp  PropellerNodeChainBuilder.h  PropellerProtobuf.cpp  PropellerProtobuf.h  Protobuf.cpp  Protobuf.h  README.md  propeller_cfg.proto
lld/ELF/Propeller/CodeLayout/: CodeLayout.cpp  CodeLayout.h  NodeChain.cpp  NodeChain.h  NodeChainAssembly.cpp  NodeChainAssembly.h  NodeChainBuilder.cpp  NodeChainBuilder.h  NodeChainClustering.cpp  NodeChainClustering.h
lld/test/ELF/: basicblock-sections-optimize-jumps.s  bb-cluster-sections-optimize-jumps.s  bb-sections-and-icf.s  plt.s  wrap-plt.s  (+9 more)
llvm/: exception_section_patch.txt
plo/: .gitignore  Makefile  Makefile2  ab_test.sh  bbfilter.cc  generate-core-diff.sh  generate-lld-bbsections-patch.sh  generate-lld-patch.inc  generate-lld-propeller-patch.sh  generate-lld-reorder-patch.sh  generate-upstream-patches.filelist  generate-upstream-patches.sh  paths.mk  plotool.patch  plotool.sh  rahmanl-Makefile  sample.c
plo/mysql-benchmark/: .gitignore  Makefile  t-test.cc
propeller/: BUILD  CMakeLists.txt  addr2cu.cc  addr2cu.h  addr2cu_test.cc  bb_addr_map.cc  bb_addr_map.h  bb_addr_map.proto  bb_handle.h  binary_address_branch.h  binary_address_branch_path.h  binary_address_mapper.cc  binary_address_mapper.h  binary_address_mapper_fuzz_test.cc  binary_address_mapper_test.cc  binary_content.cc  binary_content.h  binary_content_test.cc  branch_aggregation.cc  branch_aggregation.h  branch_aggregation_test.cc  branch_aggregator.h  branch_frequencies.cc  branch_frequencies.h  branch_frequencies.proto  branch_frequencies_aggregator.h  branch_frequencies_test.cc  cfg.cc  cfg.h  cfg.proto  cfg_edge.h  cfg_edge_kind.cc  cfg_edge_kind.h  cfg_id.h  cfg_matchers.h  cfg_node.cc  cfg_node.h  cfg_node_test.cc  cfg_test.cc  cfg_testutil.cc  (+126 more)
propeller/ArtifactEvaluation/Scripts/: mem_bolt_profile_conversion.sh  mem_propeller_profile_conversion.sh  perf-to-inst-page.sh
propeller/bzl/: BUILD  list_symbols.bzl  toolchain_vars.bzl
propeller/cloning/: BUILD  CMakeLists.txt
propeller/testdata/: BUILD  bimodal_sample.c  bimodal_sample.cloning_cc_profile.txt  bimodal_sample.x.c  bimodal_sample.x.perfdata.combined  bimodal_sample_mfs.cc_profile.txt  bimodal_sample_mfs.cloning.cc_profile.txt  bimodal_sample_mfs.cloning.ld_profile.txt  bimodal_sample_mfs.ld_profile.txt  bimodal_sample_mfs.perfdata  bimodal_sample_v2.c  bimodal_sample_v2.cloning_cc_profile.txt  duplicate_symbol_1.c  duplicate_symbol_2.c  fake_thunks.c  propeller_barebone.cc  propeller_sample.prefetch.txt  propeller_sample_1.c  ro_sampl.c  ro_sample.out  ro_sample_main.c  sample.arm.txtpb  sample.c  sample_cc_directives.cloning.golden.txt  sample_cc_directives.golden.txt  sample_cc_directives.prefetch.golden.txt  sample_cc_directives.prefetchonly.golden.txt  sample_cc_directives.v0.golden.txt  sample_section.c  sample_split_only_cc_directives.golden.txt  sample_verbose_cc_directives.golden.txt  sample_with_bb_hash_cc_directives.golden.txt  special_case.c  test_comdat.h  test_comdat_1.cc  test_comdat_2.cc  thunks.c  thunks.lds  unique_names.cc
propeller/testdata/prefetch_parsing/: BUILD  prefetch_comments.txt  prefetch_hex.txt  prefetch_invalid2.txt  prefetch_invalid3.txt  prefetch_invalid4.txt  prefetch_invalid5.txt  prefetch_mixed.txt
(+161 files in other folders)
