# Copyright 2024 The Propeller Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# https://bazel.build/external/overview#bzlmod

module(
    name = "propeller",
    version = "head",
)

# Only direct dependencies need to be listed below.

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "rules_license",
    version = "1.0.0",
)

# TODO: b/319475842 - When we add documentation, set up tooling to automatically update this
# dependency (or remind us to do so).
bazel_dep(
    name = "abseil-cpp",
    # LINT.IfChange(abseil_version)
    version = "20250512.0",
    # LINT.ThenChange(CMake/Absl/Absl.cmake:version)
)
bazel_dep(
    name = "googletest",
    # LINT.IfChange(gtest_version)
    version = "1.17.0",
    # LINT.ThenChange(CMake/Googletest/Googletest.cmake:version)
    repo_name = "com_google_googletest",
)
bazel_dep(
    name = "protobuf",
    # LINT.IfChange(protobuf_version)
    version = "30.2",
    # LINT.ThenChange(CMake/Protobuf/Protobuf.cmake:version)
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "perf_data_converter",
    # LINT.IfChange(quipper_version)
    version = "0.0.0-20241014-f76cd4d",
    # LINT.ThenChange(CMake/Quipper/Quipper.cmake:commit_hash)
    repo_name = "com_google_perf_data_converter",
)
bazel_dep(name = "rules_cc", version = "0.2.3")

# TODO: b/367348146 - Remove this transitive dependency once we ingest LLVM with bzlmod.
bazel_dep(name = "rules_python", version = "1.0.0")
