# Copyright 2024 The Propeller Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# https://bazel.build/external/overview#bzlmod

module(
    name = "propeller",
    version = "head",
)

# Only direct dependencies need to be listed below.

bazel_dep(
    name = "bazel_skylib",
    version = "1.9.0",
)
bazel_dep(
    name = "rules_license",
    version = "1.0.0",
)

# TODO: b/319475842 - When we add documentation, set up tooling to automatically update this
# dependency (or remind us to do so).
bazel_dep(
    name = "abseil-cpp",
    # LINT.IfChange(abseil_version)
    version = "20260107.1",
    # LINT.ThenChange(CMake/Absl/Absl.cmake:version)
)
bazel_dep(
    name = "googletest",
    # LINT.IfChange(gtest_version)
    version = "1.17.0.bcr.2",
    # LINT.ThenChange(CMake/Googletest/Googletest.cmake:version)
    repo_name = "com_google_googletest",
)
bazel_dep(
    name = "protobuf",
    # LINT.IfChange(protobuf_version)
    version = "33.4",
    # LINT.ThenChange(CMake/Protobuf/Protobuf.cmake:version)
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "perf_data_converter",
    # LINT.IfChange(quipper_version)
    version = "0.0.0-20260219-f9eb05f",
    # LINT.ThenChange(CMake/Quipper/Quipper.cmake:commit_hash)
    repo_name = "com_google_perf_data_converter",
)
bazel_dep(name = "rules_cc", version = "0.2.17")

# The following dependencies are not used by Propeller itself, but are needed for LLVM. When/if
# LLVM gets properly integrated with the Bazel Central Registry, these can be removed.
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_python", version = "1.8.4")
bazel_dep(name = "rules_shell", version = "0.6.1")

new_git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# LINT.IfChange(llvm_commit_hash)
LLVM_COMMIT = "c6bb1afbc5086c3f483921c575262bd95c346e5b"
# LINT.ThenChange(CMake/LLVM/LLVM.cmake:commit_hash)

new_git_repository(
    name = "llvm-raw",
    build_file_content = "# empty",
    commit = LLVM_COMMIT,
    remote = "https://github.com/llvm/llvm-project.git",
)

http_archive(
    name = "llvm_zlib",
    build_file = "@llvm-raw//utils/bazel/third_party_build:zlib-ng.BUILD",
    sha256 = "e36bb346c00472a1f9ff2a0a4643e590a254be6379da7cddd9daeb9a7f296731",
    strip_prefix = "zlib-ng-2.0.7",
    urls = [
        "https://github.com/zlib-ng/zlib-ng/archive/refs/tags/2.0.7.zip",
    ],
)

http_archive(
    name = "llvm_zstd",
    build_file = "@llvm-raw//utils/bazel/third_party_build:zstd.BUILD",
    sha256 = "7c42d56fac126929a6a85dbc73ff1db2411d04f104fae9bdea51305663a83fd0",
    strip_prefix = "zstd-1.5.2",
    urls = [
        "https://github.com/facebook/zstd/releases/download/v1.5.2/zstd-1.5.2.tar.gz",
    ],
)

llvm_ext = use_extension("//:llvm_ext.bzl", "llvm_ext")
use_repo(llvm_ext, "llvm-project")
